# Parall-lisationCamera

./: .gitignore  CMakeLists.txt
resources/: data.ods  rapport.md
src/: amel.cpp  main.cpp  quentin.cpp  qunetin.cpp
